# E7020E-Project

./: README.MD
Electronics/kicad/Gerber/: Lab1-B.Cu.gbr  Lab1-B.Mask.gbr  Lab1-Edge.Cuts.gbr  Lab1-F.Cu.gbr  Lab1-F.Mask.gbr  Lab1-NPTH-drl_map.gbr  Lab1-NPTH.drl  Lab1-PTH-drl_map.gbr  Lab1-PTH.drl
Electronics/kicad/project_alpha/: 6.35_stero_jack_socket.kicad_mod  Buttons.bak  Buttons.sch  CS4270.kicad_mod  Lab1  Lab1-cache.lib  Lab1-rescue.lib  Lab1.bak  Lab1.kicad_pcb  Lab1.kicad_pcb-bak  Lab1.net  Lab1.pro  Lab1.sch  Lab1.xml  Library_Lab1.lib  RCA.kicad_mod  USB_A_remade.kicad_mod  _autosave-Lab1.kicad_pcb  _autosave-Lab1.pro  _autosave-_autosave-Lab1.kicad_pcb  _saved_Lab1.sch  rotary_pot.kicad_mod  sym-lib-table
Electronics/kicad/project_alpha/PCB_footprints.pretty/: 6.35_stero_jack_socket.kicad_mod  RCA.kicad_mod
Electronics/kicad/project_alpha/THT_pot.pretty/: rotary_pot.kicad_mod
Software/Audio Effects/Generic Matlab exampels/: Delay.m  Echo.asv  Echo.m
Software/Rust/: .gitignore  Cargo.toml  STM32F413.svd  memory.x
Software/Rust/.cargo/: config
Software/Rust/examples/: Codec_RAM.rs  button.rs  codec.rs  codec_i2c.rs  ea_dogs.rs  hello.rs  lcd_text.rs  led.rs  pot.rs  pwm.rs  pwmpot.rs  sample.rs  sample_new.rs  test.rs
Software/Rust/src/: lcd.rs  lcd_text.rs  main.rs  pot.rs
